
2.8 (unreleased)
----------------

Upgrade notes:

1.  You will have to install django-sortedm2m - please refer to installation instructions. 

List of changes:

- Photologue now uses django-sortedm2m to sort photos in a gallery.
- Added to the documentation a page describing how to customise the admin.
- PHOTOLOGUE_USE_CKEDITOR is deprecated.
- Refactored slightly views.py.

2.7 (2013-10-27)
----------------

Upgrade notes:

1. All settings are now prefixed with 'PHOTOLOGUE_'. Please check that you are not
affected by this.

List of changes:

- Fixed issue #56, Gallery pagination is broken.
- Photologue now works with Python 3.
- Added a set of templates that work well with Twitter-Bootstrap 3, and used
  them for the 'example_project'.
- Fixed issue #64 (allow installation without installing Pillow).
- Optional use of CKEditor.
- Updated/news translations for Polish, Slovak and German.
- Bugfix: allow viewing latest galleries/latest photos pages even if they 
  are empty.
- Started using factory-boy - makes unit tests a bit easier to read.
- Added settings to customise pagination count on list pages.
- Documented all settings.
- All settings are now prefixed with 'PHOTOLOGUE_'.

2.6.1 (2013-05-19)
------------------

List of changes:

- Fixed broken packaging in release 2.6.

2.6 (2013-05-19)
----------------

Upgrade notes:

1. Photologue now relies on Pillow instead of PIL. The easiest way to upgrade is
to remove PIL completely, then install the new version of Photologue.
2. Photologue, in line with Django itself, has dropped support for Django 1.3.

List of changes:

- Switched from PIL to Pillow - hopefully this should make installation easier.
- Initial setup of data: removed plinit and replaced it with a South data migration.
- Added feature to allow extending the built-in templates (and documented it!).
- Allow editing of Photo added date (temp way of sorting photos).
- Added an example project to help people wanting to contribute to the project.