@@ -27,7 +27,7 @@ class GalleryAdmin(admin.ModelAdmin):
     list_display = ('title', 'date_added', 'photo_count', 'is_public')
     list_filter = ['date_added', 'is_public']
     date_hierarchy = 'date_added'
-    prepopulated_fields = {'title_slug': ('title',)}
+    prepopulated_fields = {'slug': ('title',)}
     form = GalleryAdminForm
 
 
@@ -44,9 +44,9 @@ class PhotoAdmin(admin.ModelAdmin):
     list_display = ('title', 'date_taken', 'date_added',
                     'is_public', 'tags', 'view_count', 'admin_thumbnail')
     list_filter = ['date_added', 'is_public']
-    search_fields = ['title', 'title_slug', 'caption']
+    search_fields = ['title', 'slug', 'caption']
     list_per_page = 10
-    prepopulated_fields = {'title_slug': ('title',)}
+    prepopulated_fields = {'slug': ('title',)}
     form = PhotoAdminForm
 
 
