@@ -11,7 +11,8 @@ from django.conf import settings
 try:
     import factory
 except ImportError:
-    raise ImportError("No module named factory. To run photologue's tests you need to install factory-boy.")
+    raise ImportError(
+        "No module named factory. To run photologue's tests you need to install factory-boy.")
 
 from ..models import Gallery, Photo, PhotoSize
 
@@ -27,13 +28,14 @@ class GalleryFactory(factory.django.DjangoModelFactory):
     FACTORY_FOR = Gallery
 
     title = factory.Sequence(lambda n: 'gallery{0:0>3}'.format(n))
-    title_slug = factory.LazyAttribute(lambda a: slugify(six.text_type(a.title)))
+    slug = factory.LazyAttribute(lambda a: slugify(six.text_type(a.title)))
 
     @factory.sequence
     def date_added(n):
         # Have to cater projects being non-timezone aware.
         if settings.USE_TZ:
-            sample_date = datetime.datetime(year=2011, month=12, day=23, hour=17, minute=40, tzinfo=utc)
+            sample_date = datetime.datetime(
+                year=2011, month=12, day=23, hour=17, minute=40, tzinfo=utc)
         else:
             sample_date = datetime.datetime(year=2011, month=12, day=23, hour=17, minute=40)
         return sample_date + datetime.timedelta(minutes=n)
@@ -48,14 +50,15 @@ class PhotoFactory(factory.django.DjangoModelFactory):
     FACTORY_FOR = Photo
 
     title = factory.Sequence(lambda n: 'photo{0:0>3}'.format(n))
-    title_slug = factory.LazyAttribute(lambda a: slugify(six.text_type(a.title)))
+    slug = factory.LazyAttribute(lambda a: slugify(six.text_type(a.title)))
     image = factory.django.ImageField(from_path=LANDSCAPE_IMAGE_PATH)
 
     @factory.sequence
     def date_added(n):
         # Have to cater projects being non-timezone aware.
         if settings.USE_TZ:
-            sample_date = datetime.datetime(year=2011, month=12, day=23, hour=17, minute=40, tzinfo=utc)
+            sample_date = datetime.datetime(
+                year=2011, month=12, day=23, hour=17, minute=40, tzinfo=utc)
         else:
             sample_date = datetime.datetime(year=2011, month=12, day=23, hour=17, minute=40)
         return sample_date + datetime.timedelta(minutes=n)
